--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b66870">  <td>19/01/02 19:12:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddAccount.createGoogleAcc()[pri:0, instance:com.Tests.AddAccount@3532ec19]">createGoogleAcc</td> 
-  <td>main@1596000437</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/01/03 22:35:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddAccountTest.setUp()[pri:0, instance:com.Tests.AddAccountTest@5622fdf]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/01/03 22:35:53</td>   <td>5297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddAccountTest.createGoogleAcc()[pri:0, instance:com.Tests.AddAccountTest@5622fdf]">createGoogleAcc</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/01/03 22:35:53</td>   <td>5315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddAccountTest.close()[pri:0, instance:com.Tests.AddAccountTest@5622fdf]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
 </table>
